objects/DE_Note__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Name__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DE_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Recipients__c</fullName>
        <label>Additional Email Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_Count__c</fullName>
        <label>Attachment Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_Notes__c</fullName>
        <label>Deployment Engineering Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Engineer__c</fullName>
        <formula>Account_Name__r.Deployment_Engineer__r.FirstName + &quot; &quot; + Account_Name__r.Deployment_Engineer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <formula>If( Attachment_Count__c != 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01538000002Fuwc&quot;, &quot;Yes&quot;, 15, 15), null)</formula>
        <label>Has Attachment?</label>
        <type>Text</type>
    </fields>
    <label>Deployment Engineering Note</label>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Deployment Engineering Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Engineering Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DE_Note_creation_when_DE_is_not_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
     Account_Name__r.Deployment_Engineering__c = false)</errorConditionFormula>
        <errorMessage>DE Notes can be created only when Deployment Engineering is checked on Account</errorMessage>
    </validationRules>
</CustomObject>